# sudoku

./: Cargo.toml  README.md
.github/: renovate.json5
.github/workflows/: test.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/sudoku/: Cargo.toml  README.md
crates/sudoku/src/: lib.rs
src/: lib.rs  main.rs
