[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Backtracking Sudoku solver in Rust"
authors = ["John Thorvald Wodder II <sudoku@varonathe.org>"]
repository = "https://github.com/jwodder/sudoku"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", default-features = false, features = ["derive", "error-context", "help", "std", "suggestions", "usage", "wrap_help"] }
either = "1.8.1"
thiserror = "1.0.38"
