[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Backtracking Sudoku solver in Rust"
authors = ["John Thorvald Wodder II <sudoku@varonathe.org>"]
repository = "https://github.com/jwodder/sudoku"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.69"
lexopt = "0.3.0"
patharg = "0.3.0"
thiserror = "1.0.38"

[dev-dependencies]
assert_cmd = "2.0.8"
tempfile = "3.3.0"
