[package]
name = "sudoku"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Backtracking Sudoku solver in Rust"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
thiserror = "1.0.38"

[lints]
workspace = true
